--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,9 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://langfordheritage.wordpress.com/">Langford Heritage Project</a>
+    <a class="sidebar-nav-item" href="https://thehungryarchaeologist.wordpress.com/">The Hungry Archaeologist</a>
+    <a class="sidebar-nav-item" href="https://twitter.com/TheHungryArch">Twitter</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
